--- a/src/interfaces/views/Buy/.components/Card/Card.module.scss
+++ b/src/interfaces/views/Buy/.components/Card/Card.module.scss
@@ -56,9 +56,8 @@
       text-overflow: ellipsis;
     }
     .subtitle {
+      font-style: italic;
       margin: 1rem 0;
-      font-family: 'GothamBookItalic';
-      font-weight: normal;
     }
   }
 
